--- a/doc/connecting/topics/r_supported-connectors.adoc
+++ b/doc/connecting/topics/r_supported-connectors.adoc
@@ -4,27 +4,27 @@
 [id='supported-connectors_{context}']
 = Connectors that are supported by {prodname}
 
-{prodname} supports the following connectors. 
+{prodname} supports the following connectors.
 
 [options="header"]
 [cols="1,3"]
 |===
-|Name 
+|Name
 |Description
 
 |link:{LinkFuseOnlineConnectorGuide}#connecting-to-s3_connectors[Amazon S3]
-|Retrieve data from an Amazon S3 bucket or copy data into a bucket. 
+|Retrieve data from an Amazon S3 bucket or copy data into a bucket.
 
 |link:{LinkFuseOnlineConnectorGuide}#connecting-to-amq_connectors[AMQ]
-|Obtain messages from a Red Hat AMQ (ApacheMQ) broker or publish messages to 
-a Red Hat AMQ (ApacheMQ) broker. 
+|Obtain messages from a Red Hat AMQ (ApacheMQ) broker or publish messages to
+a Red Hat AMQ (ApacheMQ) broker.
 
 |link:{LinkFuseOnlineConnectorGuide}#connecting-to-amqp_connectors[AMQP]
 |Obtain messages from an Advanced Message Queue Protocol broker or
-publish messages to an AMQP broker. 
+publish messages to an AMQP broker.
 
 |link:{LinkFuseOnlineConnectorGuide}#connecting-to-dropbox_connectors[Dropbox]
-|Download files from Dropbox or upload files to Dropbox. 
+|Download files from Dropbox or upload files to Dropbox.
 
 |link:{LinkFuseOnlineConnectorGuide}#connecting-to-ftp_connectors[FTP/SFTP]
 |Download files from an FTP or SFTP server or upload files to an
@@ -32,11 +32,15 @@ FTP or SFTP server.
 
 |link:{LinkFuseOnlineConnectorGuide}#connecting-to-gmail_connectors[Gmail]
 |Obtain messages sent to a particular Gmail account and send messages
-from a particular Gmail account. 
+from a particular Gmail account.
 
 |link:{LinkFuseOnlineConnectorGuide}#connecting-to-google-calendar_connectors[Google Calendar]
 |Obtain events from a Google Calendar that you specify or add/update
-events in a Google Calendar that you specify.  
+events in a Google Calendar that you specify.
+
+|link:{LinkFuseOnlineConnectorGuide}#connecting-to-google-sheets_connectors[Google Sheets]
+|Obtain data from Google Sheets spreadsheet that you specify, add/update
+data, create charts or create pivot tables in a Google Sheets spreadsheet that you specify.
 
 |link:{LinkFuseOnlineConnectorGuide}#connecting-to-http_connectors[HTTP/HTTPS]
 |Connect to an HTTP or HTTPS endpoint and execute the
@@ -47,60 +51,60 @@ events in a Google Calendar that you specify.
 or publish streams of records to a Kafka topic that you specify.
 
 |link:{LinkFuseOnlineConnectorGuide}#connecting-to-log_connectors[Log]
-|Send information about messages that an integration processes to the integration's log. 
+|Send information about messages that an integration processes to the integration's log.
 
 |link:{LinkFuseOnlineConnectorGuide}#connecting-to-mqtt_connectors[MQTT]
 |Obtain messages from an MQ Telemetry Transport broker or publish messages
-to an MQTT broker. 
+to an MQTT broker.
 
 |link:{LinkFuseOnlineConnectorGuide}#connecting-to-rest-apis_connectors[REST APIs]
 |Create a custom REST API client connector by uploading an OpenAPI
-schema. You can then create a connection to that REST API. 
+schema. You can then create a connection to that REST API.
 
-Create a REST API provider integration by uploading an OpenAPI schema 
+Create a REST API provider integration by uploading an OpenAPI schema
 that defines operations that trigger integration execution. See
-link:{LinkFuseOnlineIntegrationGuide}#trigger-integrations-with-api-calls_ug[triggering integration execution with API calls] 
+link:{LinkFuseOnlineIntegrationGuide}#trigger-integrations-with-api-calls_ug[triggering integration execution with API calls]
 in {NameOfFuseOnlineIntegrationGuide}.
 
 |link:{LinkFuseOnlineConnectorGuide}#connecting-to-sf_connectors[Salesforce]
-|Create, update, fetch, or delete a Salesforce record. 
+|Create, update, fetch, or delete a Salesforce record.
 
 |link:{LinkFuseOnlineConnectorGuide}#connecting-to-concur_connectors[SAP Concur]
-|Perform any one of a large variety of SAP Concur actions. 
+|Perform any one of a large variety of SAP Concur actions.
 
 |link:{LinkFuseOnlineConnectorGuide}#connecting-to-servicenow_connectors[ServiceNow]
-|Obtain records from or copy records to your ServiceNow instance. 
+|Obtain records from or copy records to your ServiceNow instance.
 
 |link:{LinkFuseOnlineConnectorGuide}#connecting-to-slack_connectors[Slack]
-|Obtain messages from a channel or send a message to a 
-Slack channel or user. 
+|Obtain messages from a channel or send a message to a
+Slack channel or user.
 
 |link:{LinkFuseOnlineConnectorGuide}#connecting-to-databases_connectors[SQL databases]
-|Invoke a SQL statement or a SQL stored procedure on an Apache Derby, 
+|Invoke a SQL statement or a SQL stored procedure on an Apache Derby,
 MySQL, or PostgreSQL database. To connect to other types of SQL databases,
-you upload a {prodname} library extension that contains a 
-JDBC driver for that database. 
+you upload a {prodname} library extension that contains a
+JDBC driver for that database.
 
 |link:{LinkFuseOnlineConnectorGuide}#connecting_to_telegram_connectors[Telegram]
-|Obtain messages from a chat or send messages to a chat by using 
-a Telegram chat bot. 
+|Obtain messages from a chat or send messages to a chat by using
+a Telegram chat bot.
 
 |link:{LinkFuseOnlineConnectorGuide}#triggering-integrations-with-timers_connectors[Timer]
 | Set a simple timer or a `cron` timer to trigger integration execution.
 
 |link:{LinkFuseOnlineConnectorGuide}#connecting-to-twitter_connectors[Twitter]
-|Trigger execution of an integration upon tweets that mention you or that 
-contain data you specify. 
+|Trigger execution of an integration upon tweets that mention you or that
+contain data you specify.
 
 |link:{LinkFuseOnlineConnectorGuide}#triggering-integrations-with-http-requests_connectors[Webhook]
 |Trigger integrations with HTTP `GET` or `POST` requests.
 
 |===
 
-If {prodname} does not provide a connector that you need, an 
+If {prodname} does not provide a connector that you need, an
 experienced developer can create an extension that defines a custom
-connector. For information about coding the 
-extension and creating its `.jar` file, which you upload to 
+connector. For information about coding the
+extension and creating its `.jar` file, which you upload to
 {prodname}, see:
 
 * link:{LinkToolingUserGuide}#fuseonlineextension[{NameOfToolingUserGuide}, how to use Fuse tooling to develop extensions]
