--- a/doc/integrating-applications/topics/as_developing-rest-api-client-connectors.adoc
+++ b/doc/integrating-applications/topics/as_developing-rest-api-client-connectors.adoc
@@ -11,15 +11,15 @@ Representational State Transfer Application Programming Interfaces
 (REST APIs)
 that support Hypertext Transfer Protocol (HTTP).
 To do this, {prodname} requires a valid
-OpenAPI 2.0 schema that describes a REST API that you want to connect to.
-If the API service provider does not make an OpenAPI schema available
-then an experienced developer must create the OpenAPI schema.
+OpenAPI 2.0 document that describes a REST API that you want to connect to.
+If the API service provider does not make an OpenAPI document available
+then an experienced developer must create the OpenAPI document.
 
 The following topics provide information and instructions for developing
 REST API connectors:
 
 * <<about-api-client-connectors_{context}>>
-* <<guidelines-for-openapi-specifications_{context}>>
+* <<guidelines-for-openapi-documents_{context}>>
 // The following file contains content for a feature that was not actually added. 
 // So it is not linked in anywhere. But maybe some day, it will be. 
 // * <<access-token-strategy>>
@@ -28,7 +28,7 @@ REST API connectors:
 
 include::c_about-api-connectors.adoc[leveloffset=+1]
 
-include::c_guidelines-for-openapi-specifications.adoc[leveloffset=+1]
+include::c_guidelines-for-openapi-documents.adoc[leveloffset=+1]
 
 // include::access-token-strategy.adoc[leveloffset=+1]
 
