--- a/doc/integrating-applications/topics/r_providing-client-credentials.adoc
+++ b/doc/integrating-applications/topics/r_providing-client-credentials.adoc
@@ -24,7 +24,7 @@ https://access.redhat.com/support/offerings/techpreview/[Technology Preview feat
 endif::[]
 
 To specify that {prodname} should pass client credentials as parameters, 
-in the `securityDefinitions` section of the OpenAPI schema, 
+in the `securityDefinitions` section of the OpenAPI document, 
 add the `x-authorize-using-parameters` vendor extension with a setting of
 `true`. In the example
 below, the last line specifies `x-authorize-using-parameters`:
