--- a/doc/integrating-applications/topics/as_customizing.adoc
+++ b/doc/integrating-applications/topics/as_customizing.adoc
@@ -14,7 +14,7 @@ not provide a feature that you need, talk with a developer about
 your requirements. An experienced developer can help you customize
 integrations by providing any of the following:
 
-* An OpenAPI schema that {prodname} can
+* An OpenAPI document that {prodname} can
 use to create a connector for a REST API client. 
 +
 You upload this schema to
@@ -22,9 +22,9 @@ You upload this schema to
 You then use the connector to create a connection that you
 can add to an integration. For example, many retail web sites provide
 a REST API client interface that a developer can capture in an 
-OpenAPI schema.  
+OpenAPI document.  
 
-* An OpenAPI schema for a REST API service. 
+* An OpenAPI document that defines a REST API service. 
 +
 You upload this schema to {prodname}. {prodname} makes the
 API service available and provides the URL for API calls. This lets you 
