--- a/doc/integrating-applications/topics/p_creating-api-connectors.adoc
+++ b/doc/integrating-applications/topics/p_creating-api-connectors.adoc
@@ -4,11 +4,11 @@
 [id='creating-api-connectors_{context}']
 = Create REST API client connectors
 
-Upload an OpenAPI schema to enable {prodname} to create a REST API
+Upload an OpenAPI document to enable {prodname} to create a REST API
 client connector. 
 
 .Prerequisite
-You have an OpenAPI schema for the connector that you want
+You have an OpenAPI document for the connector that you want
 {prodname} to create.
 
 .Procedure
@@ -20,7 +20,7 @@ already available are listed here.
 . On the *Create API Client Connector* page, do one of the following:
 +
 * Click *Browse* and select the OpenAPI file that you want to upload.
-* Select *Use a URL* and paste the URL for your OpenAPI schema
+* Select *Use a URL* and paste the URL for your OpenAPI document
 in the input field. 
 
 . Click *Next*. If there is invalid or missing content, {prodname}
@@ -34,14 +34,14 @@ warnings about the action definitions.
 
 . If you are satisfied with the action summary, click *Next*.
 +
-Or, to revise the OpenAPI schema, in the lower right, click *Review/Edit* 
+Or, to revise the OpenAPI document, in the lower right, click *Review/Edit* 
 to open Apicurio Studio. Update the schema as needed. 
 In the upper right, click *Save* to incorporate your updates into the 
 new API client connector. Then click *Next* to continue creating the 
 API client connector. 
 +
 For details about using Apicurio Studio, see https://www.apicur.io/. 
-Sometimes, if you provide a URL for the OpenAPI schema, {prodname} 
+Sometimes, if you provide a URL for the OpenAPI document, {prodname} 
 can upload it but  cannot open it for editing. Typically, this is caused by 
 settings on the file’s host. To open the schema for editing, 
 {prodname} requires that the file host has:
@@ -58,14 +58,14 @@ want to use to access the API.
 ... *Authorization URL* is the location for registering {prodname} as
 a client of the API. Registration authorizes {prodname} to access the API.
 See link:{LinkFuseOnlineConnectorGuide}#register-with-rest-api_rest[{NameOfFuseOnlineConnectorGuide}, Register {prodname} as a REST API client]. 
-The OpenAPI schema or other
+The OpenAPI document or other
 documentation for the API should specify this URL. If it does not then
 you must contact the service provider to obtain this URL.
 ... *Access Token URL* is required for OAuth authorization. Again, the
-OpenAPI schema or other documentation for the API should provide
+OpenAPI document or other documentation for the API should provide
 this URL. If it does not then you must contact the service provider.
 . Click *Next*. {prodname} displays the connector's name,
-description, host, and base URL as indicated by the OpenAPI schema.
+description, host, and base URL as indicated by the OpenAPI document.
 For connections that you create from this connector,
 +
 ** {prodname}
@@ -73,8 +73,8 @@ concatenates the host and base URL values to define the endpoint for
 the connection. For example, if the host is `\https://example.com` and
 the base URL is `/api/v1` then the connection endpoint is
 `\https://example.com/api/v1`.
-** {prodname} applies the OpenAPI schema to data
-mapping steps. If the OpenAPI schema supports more than one schema then {prodname}
+** {prodname} applies the OpenAPI document to data
+mapping steps. If the OpenAPI document supports more than one schema then {prodname}
 uses the TLS (HTTPS) schema.
 . Review the connector details and optionally upload an icon for the connector.
 If you do not upload an icon, {prodname} generates one.
@@ -86,7 +86,7 @@ To override a value obtained from
 the OpenAPI file, edit the field value that you want to change.
 After {prodname} creates a connector,
 you cannot change it. To effect a change, you need to upload an updated
-OpenAPI schema so that {prodname} can create a new connector
+OpenAPI document so that {prodname} can create a new connector
 or you can upload the same schema and then edit it in Apicurio Studio. 
 You then continue the process for creating a new API client connector. 
 . When you are satisfied with the connector details, click *Create API Connector*.
