--- a/doc/integrating-applications/topics/p_updating-api-connectors.adoc
+++ b/doc/integrating-applications/topics/p_updating-api-connectors.adoc
@@ -4,7 +4,7 @@
 [id='updating-api-connectors_{context}']
 = Update API client connectors by creating new ones
 
-When there is an update to an OpenAPI schema from which you created an
+When there is an update to an OpenAPI document from which you created an
 API client connector, and you want your API client connector to use those
 updates, you must create a new API client connector.
 You cannot directly update an API client connector. After you create
@@ -16,12 +16,12 @@ from the out-of-date connector.
 
 Be prepared to do one of the following:
 
-* Upload the updated OpenAPI schema.
+* Upload the updated OpenAPI document.
 * Upload the out-of-date schema again and update it in Apicurio Studio.
 
 .Procedure
 
-. Create a new API client connector based on the updated OpenAPI schema.
+. Create a new API client connector based on the updated OpenAPI document.
 To easily distinguish between the old connector and the new connector, 
 you  might want to specify a version number in the connector name or 
 the connector description. 
